src/test/contracts/top_level_patterns/negative/jsligo/ticket_record.jsligo
type t = { b: ticket<string> };

const { b } = { b: Option.unopt(Mavryk.create_ticket("one", 10 as nat)) };

type storage = ticket<string>;

@entry
const main = (_p: unit, _s: storage): [list<operation>, storage] =>
  [list([]), Option.unopt(Mavryk.join_tickets([b, b]))];
